// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cms-lib/schema cleanSchema() cleans a full schema 1`] = `
Object {
  "associatedObjects": undefined,
  "labels": Object {
    "plural": "Listing Agents",
    "singular": "Listing Agent",
  },
  "name": "listing_agent",
  "primaryDisplayProperty": "agentfirstname",
  "properties": Array [
    Object {
      "description": undefined,
      "fieldType": "text",
      "label": "Agent First Name",
      "name": "agentfirstname",
      "type": "string",
    },
    Object {
      "description": undefined,
      "fieldType": "text",
      "label": "Agent Last Name",
      "name": "agentlastname",
      "type": "string",
    },
    Object {
      "description": undefined,
      "fieldType": "text",
      "label": "Photo",
      "name": "photo",
      "type": "string",
    },
  ],
  "requiredProperties": Array [
    "agentfirstname",
    "agentlastname",
  ],
  "searchableProperties": Array [
    "agentfirstname",
  ],
}
`;

exports[`cms-lib/schema cleanSchema() cleans multiple schema 1`] = `
Array [
  Object {
    "associatedObjects": undefined,
    "labels": Object {
      "plural": "Listing Agents",
      "singular": "Listing Agent",
    },
    "name": "listing_agent",
    "primaryDisplayProperty": "agentfirstname",
    "properties": Array [
      Object {
        "description": undefined,
        "fieldType": "text",
        "label": "Agent First Name",
        "name": "agentfirstname",
        "type": "string",
      },
      Object {
        "description": undefined,
        "fieldType": "text",
        "label": "Agent Last Name",
        "name": "agentlastname",
        "type": "string",
      },
      Object {
        "description": undefined,
        "fieldType": "text",
        "label": "Photo",
        "name": "photo",
        "type": "string",
      },
    ],
    "requiredProperties": Array [
      "agentfirstname",
      "agentlastname",
    ],
    "searchableProperties": Array [
      "agentfirstname",
    ],
  },
  Object {
    "associatedObjects": undefined,
    "labels": Object {
      "plural": "Property Listings",
      "singular": "Property Listing",
    },
    "name": "property-listing",
    "primaryDisplayProperty": "address",
    "properties": Array [
      Object {
        "description": undefined,
        "fieldType": "text",
        "label": "Address",
        "name": "address",
        "type": "string",
      },
      Object {
        "description": "How many bathrooms",
        "fieldType": "number",
        "label": "Bathrooms",
        "name": "bathrooms",
        "type": "number",
      },
      Object {
        "description": "How many bedrooms the listing has",
        "fieldType": "number",
        "label": "Bedrooms",
        "name": "bedrooms",
        "type": "number",
      },
      Object {
        "description": undefined,
        "fieldType": "textarea",
        "label": "Description",
        "name": "description",
        "type": "string",
      },
      Object {
        "description": "HTML title for object dynamic pages",
        "fieldType": "text",
        "label": "Dynamic Page Title",
        "name": "dynamic_page_title",
        "type": "string",
      },
      Object {
        "description": "The url slug for use in object dynamic pages",
        "fieldType": "text",
        "label": "Dynamic Page Slug",
        "name": "dynamic_page_uri",
        "type": "string",
      },
      Object {
        "description": undefined,
        "fieldType": "date",
        "label": "Open House Date",
        "name": "open_house_date",
        "type": "date",
      },
      Object {
        "description": "Price of property",
        "fieldType": "number",
        "label": "Price",
        "name": "price",
        "type": "number",
      },
      Object {
        "description": "Property Image",
        "fieldType": "text",
        "label": "Property Image",
        "name": "property_image",
        "type": "string",
      },
      Object {
        "description": "Square feet of the property ",
        "fieldType": "number",
        "label": "Square Feet",
        "name": "square_feet",
        "type": "number",
      },
    ],
    "requiredProperties": Array [
      "address",
    ],
    "searchableProperties": Array [
      "address",
    ],
  },
]
`;

exports[`cms-lib/schema logSchemas() logs schemas 1`] = `
"╔════════╤════════╤══════════════╗
║ [1mLabel[22m  │ [1mName[22m   │ [1mobjectTypeId[22m ║
║ Schema │ schema │              ║
╚════════╧════════╧══════════════╝
"
`;

exports[`cms-lib/schema writeSchemaToDisk() writes schema to disk 1`] = `
"{
  \\"name\\": \\"schema\\",
  \\"labels\\": { \\"singular\\": \\"Schema\\", \\"plural\\": \\"Schemas\\" },
  \\"requiredProperties\\": [],
  \\"searchableProperties\\": [],
  \\"primaryDisplayProperty\\": \\"name\\",
  \\"associatedObjects\\": null,
  \\"properties\\": [
    {
      \\"name\\": \\"name\\",
      \\"label\\": \\"Name\\",
      \\"type\\": \\"string\\",
      \\"fieldType\\": \\"text\\",
      \\"description\\": \\"Name Field\\"
    }
  ]
}
"
`;
